# xml_parser

./: Cargo.toml  README.md
src/: grammar.pest  lib.rs  main.rs
tests/: cli.rs  parse_file.rs
tests/samples/: 2names.xml  everything.txt  invalid.txt  simple.txt
